--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -1,22 +1,24 @@
 defaults:
   - model_checkpoint
-  - early_stopping
+  # - early_stopping
   - model_summary
   - rich_progress_bar
+  - learning_rate_monitor
   - _self_
 
 model_checkpoint:
   dirpath: ${paths.output_dir}/checkpoints
-  filename: "epoch_{epoch:03d}"
-  monitor: "val/acc"
-  mode: "max"
+  filename: "epoch_{epoch:03d}_{val/loss:2f}"
+  monitor: "val/loss"
+  mode: "min"
   save_last: True
   auto_insert_metric_name: False
+  save_top_k: 3
 
 early_stopping:
-  monitor: "val/acc"
-  patience: 100
-  mode: "max"
+  monitor: "val/loss"
+  patience: 10
+  mode: "min"
 
 model_summary:
   max_depth: -1
