--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,10 +4,10 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
-  - data: mnist
-  - model: mnist
+  - data: adms
+  - model: atpn_self
   - callbacks: default
-  - logger: null # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
+  - logger: tensorboard # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: default
   - paths: default
   - extras: default
@@ -29,6 +29,7 @@ defaults:
 
 # task name, determines output directory path
 task_name: "train"
+version_name: "debug"
 
 # tags to help you identify your experiments
 # you can overwrite this in experiment configs
@@ -46,4 +47,4 @@ test: True
 ckpt_path: null
 
 # seed for random number generators in pytorch, numpy and python.random
-seed: null
+seed: 2023
