--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -2,8 +2,8 @@
 
 defaults:
   - _self_
-  - data: mnist # choose datamodule with `test_dataloader()` for evaluation
-  - model: mnist
+  - data: adms # choose datamodule with `test_dataloader()` for evaluation
+  - model: atpn_self
   - logger: null
   - trainer: default
   - paths: default
@@ -11,6 +11,7 @@ defaults:
   - hydra: default
 
 task_name: "eval"
+version_name: "debug"
 
 tags: ["dev"]
 
